# VegasAfterglow

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  IO.cpp  IO.h  MANIFEST.in  Makefile  README.md  afterglow.cpp  afterglow.h  dynamics.cpp  dynamics.h  forward-shock.cpp  forward-shock.h  inverse-compton.cpp  inverse-compton.h  jet.cpp  jet.h  macros.h  main.cpp  medium.cpp  medium.h  mesh.cpp  mesh.h  observer.cpp  observer.h  physics.cpp  physics.h  prompt.cpp  prompt.h  pyproject.toml  relativity.h  setup.py  shock.cpp  shock.h  synchrotron.cpp  synchrotron.h  utilities.cpp  utilities.h
.github/workflows/: PyPI-build.yml  c-cpp.yml  ci.yml  docs.yml
VegasAfterglow/: __init__.py  runner.py  sampler.py  types.py
assets/: README.md
docs/: Doxyfile  README.md  build_docs.sh  requirements.txt  setup_local_assets.sh
docs/source/: conf.py  contributing.rst  cpp_api.rst  documentation_guide.rst  examples.rst  index.rst  installation.rst  mcmc_fitting.rst  parameter_reference.rst  python_api.rst  quickstart.rst  test_class.rst  troubleshooting.rst
include/: IO.h  afterglow.h  forward-shock.hpp  inverse-compton.h  jet.h  macros.h  medium.h  mesh.h  observer.h  physics.h  prompt.h  reverse-shock.hpp  shock.h  simple-shock.h  simple-shock.hpp  synchrotron.h  utilities.h
pybind/: emission.cpp  emission.h  mcmc.cpp  mcmc.h  pybind.cpp  pybind.h  pymodel.cpp  pymodel.h  setup.h  struct.h
pymodule/VegasAfterglow.egg-info/: PKG-INFO
script/: details.ipynb  emission.py  mcmc.ipynb  quick.ipynb
script/data/: ep-spec.csv  ep.csv  r.csv  vt-r.csv
src/core/: mesh.cpp  observer.cpp  physics.cpp
src/dynamics/: forward-shock.cpp  forward-shock.tpp  reverse-shock.cpp  reverse-shock.tpp  shock.cpp  simple-shock.cpp  simple-shock.tpp
src/models/: jet.cpp  medium.cpp
src/radiation/: inverse-compton.cpp  prompt.cpp  synchrotron.cpp
src/util/: IO.cpp  utilities.cpp
tests/EP/: EP.cpp
tests/benchmark/: benchmark.cpp  plot.ipynb
tests/code-comparison/: code-comp.cpp
tests/demo/: demo.cpp  plot.ipynb
tests/fiducial/: afterglow.cpp
