[build-system]
requires = [
  "setuptools>=68.0.0",   # PEP 621 license-files support lands in 68+
  "wheel",
  "packaging>=23.0",      # ensures the TOML parser knows about license-files
  "pybind11>=2.6.0",
  "ninja",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"VegasAfterglow" = "python"

[tool.setuptools.packages.find]
where = ["python"]
include = ["VegasAfterglow*"]

[tool.cibuildwheel]
environment = { PIP_NO_COMPILE = "1", CMAKE_GENERATOR = "Ninja" }
test-command = "python -c \"import VegasAfterglow; print('OK')\""

[project]
name = "VegasAfterglow"
version = "0.1.0"
description = "MCMC tools for astrophysics"
authors = [
  { name = "Yihan Wang" },
  { name = "Connery Chen" },
  { name = "Bing Zhang" },
]
license = { text = "MIT" }        # SPDX expression
license-files = ["LICENSE"]       # now recognized by setuptools ≥68
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.19",
  "pandas>=1.1",
  "emcee>=3.0",
  "pybind11>=2.6.0",
  "corner>=2.2.1",
  "tqdm>=4.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "ninja",
  "pytest",
  "black",
]