[build-system]
requires = [
  "setuptools>=61",     # setuptools>=61+ supports tool.setuptools.metadata
  "wheel",
  "pybind11>=2.6.0",
  "ninja",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"VegasAfterglow" = "python"

[tool.setuptools.packages.find]
where = ["python"]
include = ["VegasAfterglow*"]

[tool.setuptools.metadata]
license_files = ["LICENSE"]

[tool.cibuildwheel]
environment = { PIP_NO_COMPILE = "1", CMAKE_GENERATOR = "Ninja" }
test-command = "python -c \"import VegasAfterglow; print('OK')\""

[project]
name = "VegasAfterglow"
version = "0.1.0"
description = "MCMC tools for astrophysics"

authors = [
  { name = "Yihan Wang" },
  { name = "Connery Chen" },
  { name = "Bing Zhang" },
]

license = { text = "MIT" }   # SPDX expression only—no files here
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "numpy>=1.19",
  "pandas>=1.1",
  "emcee>=3.0",
  "pybind11>=2.6.0",
  "corner>=2.2.1",
  "tqdm>=4.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "ninja",
  "pytest",
  "black",
]